--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "infinix-bot",
+  "name": "Taku-Bot-xD",
   "description": "Bot poderoso para whatsapp",
-  "repository": "https://github.com/BochilGaming/games-wabot",
+  "repository": "https://github.com/THETAKU09/Taku-Bot-xD",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
-  "keywords": ["bot", "whatsapp", "whatsapp-bot", "rpg", "infinix-bot", "epic rpg"]
+  "keywords": ["bot", "whatsapp", "whatsapp-bot", "rpg", "Taku-Bot-xD", "epic rpg"]
 }
